Fix horizontal scroll on the arkcase web-app

--- a/acm-user-interface/ark-web/src/main/webapp/resources/modules/core/scss/_menu.scss
+++ b/acm-user-interface/ark-web/src/main/webapp/resources/modules/core/scss/_menu.scss
@@ -34,7 +34,6 @@
       background-position: $navbar-logo-bg-position;
       position: $navbar-logo-position;
       width: $navbar-logo-width;
-      padding-left: $navbar-logo-padding-left;
       overflow: $navbar-logo-overflow;
     }
   }
